[gd_scene load_steps=5 format=3 uid="uid://k1x5b36fbumy"]

[ext_resource type="Script" uid="uid://b1ll4bgwtkoin" path="res://micro_atrapalo.gd" id="1_anq08"]
[ext_resource type="Texture2D" uid="uid://cnpij3bucijph" path="res://fondos/fondocielo.png" id="2_brtyp"]
[ext_resource type="Texture2D" uid="uid://ccahi454ny40h" path="res://sprites/gatocaja.png" id="3_pu7re"]
[ext_resource type="Texture2D" uid="uid://c4i174hdyxd7f" path="res://sprites/rat.png" id="4_rywxs"]

[node name="MicroAtrapalo" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_anq08")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1922.0
offset_bottom = 1090.0
texture = ExtResource("2_brtyp")

[node name="Caja" type="TextureRect" parent="."]
offset_left = 627.0
offset_top = 494.0
offset_right = 1256.0
offset_bottom = 1123.0
texture = ExtResource("3_pu7re")

[node name="Raton" type="TextureRect" parent="."]
offset_left = 811.0
offset_top = 300.0
offset_right = 1131.0
offset_bottom = 620.0
texture = ExtResource("4_rywxs")

[node name="TextoInstruccion" type="Label" parent="."]
layout_mode = 0
offset_left = 418.0
offset_top = 50.0
offset_right = 832.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 80
text = "Atr[A]palo!"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="ZonaCaptura" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 891.0
offset_top = 300.0
offset_right = 1090.0
offset_bottom = 506.0
color = Color(0.992538, 0, 0.17589, 1)

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
